--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Blog time</title>
     <link href="index.css" rel="stylesheet" type="text/css">
+    <meta name="viewport" content="width=device-width initial-scale=1">
 </head>
 
 <!--headings-->
@@ -70,7 +71,12 @@ Screen-Shot-2019-02-25-at-11.39.20.png" alt="Epic sloth" >
 <div>
 <p>
   <h3 class="blue-text">How are they not extinct yet?</h3>
-Below is a collection of common sloth species and their endangered
+It is believed that the reason they haven't disappeared yet is
+due to their lack of muscle mass, with their muscle only making up 25-30% of 
+their total body weight as opposed to most other mammals having muscle mass that
+makes up 40-45%
+  <br>
+  Below is a collection of common sloth species and their endangered
 status:
 </p>
 <table>
