--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   </div>
 <header>
-  <img class="logo" src="logo.jpg" alt="logo">
+  <img class="logo" src="C:\Users\GGPC\Workspace\ben-ohara.github.io\blog\logo.jpg" alt="logo">
   
   <nav>
     <ul class="nav_links">
