--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
   <li><a href="https://ben-ohara.github.io/blog/identity-values.html">Sprint 2: Identity-Values</a></li>
   <li><a href="https://ben-ohara.github.io/blog/learning-plan.html">Sprint 2: Learning-Plan</a></li>
   <li><a href="https://ben-ohara.github.io/blog/EQ.html">Sprint 3: Emotional Intellegence</a></li>
-  <li><a href="#">Sprint 4: placeholder</a></li>
+  <li><a href="https://ben-ohara.github.io/blog/neuroplasticity.html">Sprint 4: Neuroplasticty</a></li>
   <li><a href="#">Placr</a></li>
 </ul>
 <h3>Tech:</h3>
 <ul>
   <li><a href="https://ben-ohara.github.io/blog/margins.html">Sprint 2: Margins, padding and borders</a></li>
   <li><a href="https://ben-ohara.github.io/blog/JS-Fundamentals.html">Sprint 3: JS Fundamentals</a></li>
-  <li><a href="#">Sprint 4: placeholder</a></li>
+  <li><a href="https://ben-ohara.github.io/blog/problem-solving.html">Sprint 4: Problem Solving</a></li>
   <li><a href="#">Placr</a></li>
 </ul>
 
